# finlink

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml
.github/workflows/: backend-lint.yml  backend-test.yml  deploy.yml  frontend-lint.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: config.py  db.py  main.py
backend/app/models/: common.py  relationship.py  transaction.py  user.py
backend/app/routers/: relationship.py  transaction.py  user.py  users.py
backend/app/services/: relationship.py  transaction.py  user.py
backend/data_generator/: generator.py
backend/tests/: conftest.py  test_relationships.py  test_transactions.py  test_users.py
frontend/: .prettierrc  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: relationships.ts  transactions.ts  users.ts
frontend/src/components/: Layout.tsx  RelationshipGraph.tsx  ShortestPathFinder.tsx  TransactionFormDialog.tsx  TransactionGraph.tsx  UserFormDialog.tsx
frontend/src/pages/: TransactionDetailPage.tsx  TransactionsPage.tsx  UserDetailPage.tsx  UsersPage.tsx
