[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
    "python-dotenv",
    "pydantic-settings",
    "neo4j>=6.1.0",
    "email-validator>=2.3.0",
    "faker",
    "numpy",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.15.9",
    "pre-commit",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "httpx",
    "testcontainers[neo4j]",
    "pytest-mock",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"